--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,15 @@
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<title>Deyan's Cooking Book</title>
 </head>
 
 <body>
-	<!-- Navigation -->
+	<!-- Nav and menu bar -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">Start Bootstrap</a>
+			<a class="navbar-brand" href="#">Deyan's Cooking Book</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,16 +29,16 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">How it works</a>
 					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="#">Recipes List</a>
+					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Share your feedback</a>
+						<a class="nav-link" href="#">Recipes Dashboard</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<h1>
-		index.html
-	</h1>
       <!-- Page Content -->
   <div class="container">
 
@@ -46,7 +46,7 @@
     <header class="jumbotron my-4">
       <h1 class="display-3">Want to create and upload your own recipe?</h1>
       <p class="lead"> {% block content %}{% endblock %}</p>
-      <a href="#" class="btn btn-primary btn-lg">Add recipe</a>
+      <a href="#" class="btn btn-primary btn-lg">Share your recipe</a>
     </header>
 
     <!-- Page Features -->
@@ -112,7 +112,10 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Social Links Here</p>
+      <p class="m-0 text-center text-white">Social Links (here)</p>
+    </div>
+    <div class="container">
+      <p class="m-0 text-center text-white">Share your feedback (here)</p>
     </div>
     <!-- /.container -->
   </footer>
@@ -126,6 +129,12 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
 		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+     <script type="text/javascript">
+        $(document).ready(function() {
+            $('.collapsible').collapsible();
+        })
+    </script>   
 </body>
 
 </html>
