refined code with a loop index.html

--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -19,7 +19,7 @@
 		      <option value="2">South and East Asia</option>
               <option value="2">Central Asia</option>
 		      <option value="3">Pacific</option>
-              <option value="3">Other(use )</textarea></option>
+              <option value="3">Other(use )</option>
 		    </select>
 				<label>Culinary Region</label>
 			</div>
@@ -60,7 +60,7 @@
 				<label for="icon_prefix">Suitable Time to Eat it</label>
 			</div>
 		</div>
-		</div>
+		
         <div id="matfix" class="row">
             <div class="input-field col s12">
 				<i class="material-icons prefix">date_range</i>
