--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<title>Deyan's Cooking Book</title>
 </head>
 
@@ -27,99 +27,62 @@
 					<li class="nav-item">
 						<a class="nav-link" href="#">How it works</a>
 					</li>
-                    <li class="nav-item">
+					<li class="nav-item">
 						<a class="nav-link" href="#">Recipes List</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Recipes Dashboard</a>
 					</li>
 				</ul>
-			</div>  -->
+			</div> -->
 		</div>
 	</nav>
-      <!-- Page Content -->
-  <div class="container">
+	<!-- Page Content -->
+	<div class="container">
 
-    <!-- Jumbotron Header -->
-    <header class="jumbotron my-4">
-      <h1 class="display-3">Want to create and upload your own recipe?</h1>
-      <p class="lead">{% block content %}{% endblock %}</p>
-    </header>
+		<!-- Jumbotron Header -->
+		<header class="jumbotron my-4">
+			<h1 class="display-3">Want to create and upload your own recipe?</h1>
+			<p class="lead">{% block content %}{% endblock %}</p>
+		</header>
 
-    <!-- Page Features -->
-    <div class="row text-center">
+		<!-- Page Features -->
+		<div class="row text-center">
+			{% for recipe in recipes %}
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card h-100">
+					<img class="card-img-top" src="{{ recipe.image }}" alt="">
+					<div class="card-body">
+						<h4 class="card-title">{{ recipe.name }}</h4>
+						<p class="card-text">{{ recipe.description }}</p>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">Explore</a>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Mish Mash</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Explore</a>
-          </div>
-        </div>
-      </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Bulgarian Panini</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Explore</a>
-          </div>
-        </div>
-      </div>
+		</div>
+		<!-- /.row -->
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Slavic Gyuvetch</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Explore</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Spanish Garlic Soup</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Explore</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!-- /.row -->
-
-  </div>
-  <!-- /.container -->
-  <!-- Footer -->
-  <footer class="py-5 bg-dark">
-    <div class="container">
-      <p class="m-0 text-center text-white">Social Links (here)</p>
-    </div>
-    <div class="container">
-      <p class="m-0 text-center text-white">Share your feedback (here)</p>
-    </div>
-    <!-- /.container -->
-  </footer>
+	</div>
+	<!-- /.container -->
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Social Links (here)</p>
+		</div>
+		<div class="container">
+			<p class="m-0 text-center text-white">Share your feedback (here)</p>
+		</div>
+		<!-- /.container -->
+	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+	<script type="text/javascript">
+		$(document).ready(function () {
             $('.collapsible').collapsible();
             $('select').material_select();
         });
@@ -134,7 +97,7 @@
         document.getElementById("matfix").addEventListener("click", function(e) {
 	    e.stopPropagation();
         });
-    </script> 
+	</script>
 </body>
 
 </html>
