recipes list added

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,14 +69,8 @@
 
 	</div>
 	<!-- /.container -->
-	<!-- Footer -->
-	<footer class="py-5 bg-dark">
-		<div class="container">
-			<p class="m-0 text-center text-white">Social Links (here)</p>
-		</div>
-		<div class="container">
-			<p class="m-0 text-center text-white">Share your feedback (here)</p>
-		</div>
+	<!-- Footer here-->
+	
 		<!-- /.container -->
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
