correct routing added

--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -8,7 +8,8 @@
 				<label for="icon_prefix">Recipe Name</label>
 			</div>
 		</div>
-		<div class="row">
+
+		<!-- <div class="row">
 			<div class="input-field col s12"><i class="material-icons prefix">explore</i>
 				<select id="region" class="region_name">
 		      <option value="" disabled selected>Choose Region</option>
@@ -59,8 +60,7 @@
 				<textarea id="time_of_the_day" name="time_of_the_day" type="text" class="materialize-textarea"></textarea>
 				<label for="icon_prefix">Suitable Time to Eat it</label>
 			</div>
-		</div>
-		
+		</div> -->
         <div id="matfix" class="row">
             <div class="input-field col s12">
 				<i class="material-icons prefix">date_range</i>
