--- a/templates/meals.html
+++ b/templates/meals.html
@@ -1,16 +1,16 @@
-{% extends 'index.html' %}
-{% block content %}
-{% for recipe in recipes %}
+{% extends 'index.html' %} {% block content %} 
 
-    {{recipe.name}}
-    {{recipe.description}}
-    {{recipe.time_to_prepare}}
-    {{recipe.ingredients}}
-    {{recipe.spices}}   
-    {{recipe.cooking}}
-    {{recipe.time_of_the_day}}
-    {{recipe.cooked_meal}}
+<ul class="collapsible" data-collapsible="accordion">
+	{% for recipe in recipes %}
+	<li>
+		<div class="collapsible-header"><i class="material-icons">add</i>{{recipe.name}} - {{recipe.description}}</div>
+		<div class="collapsible-body"><span>{{recipe.cooked_meal}}
+</span></div>
+	</li>
+	{% endfor %}
+</ul>
+{% endblock %}
 
 
-{% endfor %}
-{% endblock %}  
+
+
