--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Sign Up</h3>
     <div class="box">
-        <form method="POST" action="/signup">
+        <form action="{{ url_for('signup_post') }}" method="POST">
             <div class="field">
                 <div class="control">
                     <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
