--- a/templates/login.html
+++ b/templates/login.html
@@ -16,14 +16,11 @@
                     <input class="input is-large" type="password" name="password" placeholder="Your Password">
                 </div>
             </div>
-            <div class="field">
-                <label class="checkbox">
-                    <input type="checkbox">
-                    Remember me
-                </label>
-            </div>
+
             <button class="button is-block is-info is-large is-fullwidth">Login</button>
-        </form>
+        </form><br>
+        <div>Don't have an account? <a href="{{ url_for('signup') }}">Sign up here</a>.
+        </div>
     </div>
 </div>
 {% endblock %}
