--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,26 +4,19 @@
 <div class="column is-4 is-offset-4">
     <h3 class="title">Sign Up</h3>
     <div class="box">
-        <form action="{{ url_for('signup_post') }}" method="POST">
+        <form onclick="validate()" action="{{ url_for('signup') }}" method="POST">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+                    <input id="email" class="input is-large form-control" type="email" name="email" placeholder="Email" autofocus="">
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <input  id="password" class="input is-large form-control" type="password" name="password" placeholder="Password">
                 </div>
             </div>
 
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
-                </div>
-            </div>
-
-            <div class="field">
-                <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
-                </div>
-            </div>
-
-            <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+            <button class="button is-block is-info is-large is-fullwidth" type="submit">Register</button>
         </form>
     </div>
 </div>
