rendered the review score page with db

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<title>Deyan's Cooking Book</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css"/>
+    <title>Deyan's Cooking Book</title>
 </head>
 
 <body>
