--- a/templates/meals.html
+++ b/templates/meals.html
@@ -1,16 +1,26 @@
-{% extends 'index.html' %} {% block content %} 
+{% extends 'index.html' %} {% block content %}
 
 <ul class="collapsible" data-collapsible="accordion">
 	{% for recipe in recipes %}
 	<li>
-		<div class="collapsible-header"><i class="material-icons">add</i>{{recipe.name}} - {{recipe.description}}</div>
-		<div class="collapsible-body"><span>{{recipe.cooked_meal}}
-</span></div>
+		<div class="collapsible-header">
+            <div class="col s1">
+                <i class="material-icons">add</i>
+            <div>
+			<div class="col s9">
+				<strong>{{recipe.name}} - {{recipe.description}}</strong>
+			</div>
+			<div class="col s2">
+            <div class="inline_actions">
+				<a href="{{url_for('review_meals', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">Review</a>
+				<a class="waves-effect waves-light btn btn-small">Upload Photo</a>
+            </div>
+			</div>
+		</div>
+			<div class="collapsible-body">
+				<span>{{recipe.cooked_meal}}</span>
+			</div>
 	</li>
 	{% endfor %}
 </ul>
 {% endblock %}
-
-
-
-
