active button to remove file rendered

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
 		<!-- Jumbotron Header -->
 		<header class="jumbotron my-4">
-			<h1 class="display-3">Want to create and upload your own recipe?</h1>
+			<!--    <h1 class="display-3">Want to create and upload your own recipe?</h1> -->
 			<p class="lead">{% block content %}{% endblock %}</p>
 		</header>
 
