--- a/templates/ratings.html
+++ b/templates/ratings.html
@@ -6,7 +6,7 @@
 			<div class="input-field col s12">
 				<i class="material-icons prefix">add</i>
 				<input id="name" name="name" type="text" class="validate">
-				<label for="icon_prefix">Recipe Name</label>
+				<label for="icon_prefix">Leave a review score</label>
 			</div>
 		</div>
 
@@ -81,7 +81,7 @@
 		</div>
 		
 		<div class="row">
-			<button class="btn waves-effect waves-light" type="submit" name="action">Upload Recipe
+			<button class="btn waves-effect waves-light" type="submit" name="action">Submit Review
 				<i class="material-icons right">done_all</i></button>
 		</div>
 	</form>
