--- a/templates/login.html
+++ b/templates/login.html
@@ -7,13 +7,13 @@
         <form method="POST" action="/login">
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+                    <input required class="materialize-textarea input is-large form-control validate" type="email" name="email" placeholder="Your Email" autofocus="">
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    <input required class="materialize-textarea input is-large form-control validate" type="password" name="password" placeholder="Your Password">
                 </div>
             </div>
 
