--- a/templates/meals.html
+++ b/templates/meals.html
@@ -1,11 +1,11 @@
-{% extends 'index.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <ul class="collapsible" data-collapsible="accordion">
 	{% for recipe in recipes %}
 	<li>
 		<div class="collapsible-header">
             <div class="col s1">
-                <i class="material-icons">add</i>
+                <i class="material-icons">expand</i>
             <div>
 			<div class="col s9">
 				<strong>{{recipe.name}} - {{recipe.time_to_prepare}}</strong>
@@ -13,13 +13,11 @@
 			<div class="col s2">
             <div class="inline_actions">
 				<a href="{{url_for('review_meals', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">Rate</a>
-				<a href="{{url_for('delete_recipe', meal_id=recipe._id)}}"class="waves-effect waves-light btn btn-small">Remove</a>
+                <a href="{{url_for('carta', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">View</a>
+				<a href="{{url_for('delete_recipe', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small">Remove</a>
             </div>
 			</div>
 		</div>
-			<div class="collapsible-body">
-				<span>{{recipe.cooked_meal}}</span>
-			</div>
 	</li>
 	{% endfor %}
 </ul>
