--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -1,16 +1,17 @@
-{% extends 'index.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %}
+<h3>Share own original recipe</h3>
 <div class="row">
-	<form action="{{ url_for('upload_recipe') }}" method="POST" class="col s12">
+	<form action="{{ url_for('upload_recipe') }}" method="POST" class="col s12" name="myform">
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">add</i>
-				<input id="name" name="name" type="text" class="validate">
+				<input id="name" name="name" type="text" required class="materialize-textarea form-control validate"> 
 				<label for="icon_prefix">Recipe Name</label>
 			</div>
 		</div>
 
-		<!-- <div class="row">
-			<div class="input-field col s12"><i class="material-icons prefix">explore</i>
+		<div class="row">
+			<div class="input-field  col s12"><i class="material-icons prefix">explore</i>
 				<select id="region" class="region_name">
 		      <option value="" disabled selected>Choose Region</option>
 		      <option value="1">East Medditerenian</option>
@@ -29,42 +30,29 @@
          <div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">map</i>
-				<textarea id="time_to_prepare" name="time_to_prepare" type="text" class="materialize-textarea"></textarea>
-				<label for="icon_prefix">Time to prepare</label>
+				<textarea id="time_to_prepare" name="time_to_prepare" type="text" required class="materialize-textarea form-control validate"></textarea>
+				<label for="icon_prefix">Time needed to prepare</label>
 			</div>
 		</div>
          <div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">map</i>
-				<textarea id="ingredients" name="ingredients" type="text" class="materialize-textarea"></textarea>
-				<label for="icon_prefix">Ingredients</label>
-			</div>
-		</div>
-         <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">map</i>
-				<textarea id="spices" name="spices" type="text" class="materialize-textarea"></textarea>
-				<label for="icon_prefix">Spices to Use</label>
+				<textarea id="ingredients" name="ingredients" type="text" required class="materialize-textarea form-control validate"></textarea>
+				<label for="icon_prefix">Ingredients and Spice</label>
 			</div>
 		</div>
          <div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">edit</i>
-				<textarea id="cooking" name="cooking" type="text" class="materialize-textarea"></textarea>
+				<textarea id="cooking" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
 				<label for="icon_prefix">How to prepeare and cook it?</label>
 			</div>
 		</div>
-                 <div class="row">
-			<div class="input-field col s12">
-				<i class="material-icons prefix">map</i>
-				<textarea id="time_of_the_day" name="time_of_the_day" type="text" class="materialize-textarea"></textarea>
-				<label for="icon_prefix">Suitable Time to Eat it</label>
-			</div>
-		</div> -->
+
         <div id="matfix" class="row">
             <div class="input-field col s12">
 				<i class="material-icons prefix">date_range</i>
-				<input id="upload-date" name="upload-date" type="text" class="datepicker">
+				<input id="upload-date" name="upload-date" type="text" required class="validate datepicker">
 				<label for="icon_prefix">Date of Upload</label>
 			</div>
         </div>
@@ -72,7 +60,7 @@
 			<div class="switch">
 				<label>
 				      No
-				      <input id="cooked_meal" name="cooked_meal" type="checkbox">
+				      <input id="cooked_meal" name="cooked_meal" type="checkbox" required class="materialize-textarea form-control validate">
 				      <span class="lever"></span>
 					Yes, I have cooked this meal!
 				</label>
@@ -80,7 +68,7 @@
 		</div>
 		
 		<div class="row">
-			<button class="btn waves-effect waves-light" type="submit" name="action">Upload Recipe
+			<button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Upload Recipe
 				<i class="material-icons right">done_all</i></button>
 		</div>
 	</form>
