--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %} {% block content %} 
+{% extends 'base.html' %} {% block content %} 
 
 <ul class="collapsible" data-collapsible="accordion">
 	{% for recipe in recipes %}
