logout page initial coding

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1 class="title">
-</h1>
+<h4>Login Successfull</h4>
+<div>Not you? <a href="{{ url_for('logout') }}"><strong>Log out here</strong></a>
+        </div>
 {% endblock %}
