--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -48,6 +48,13 @@
 				<label for="icon_prefix">How to prepeare and cook it?</label>
 			</div>
 		</div>
+         <div class="row">
+			<div class="input-field col s12">
+				<i class="material-icons prefix">edit</i>
+				<textarea id="cooking" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
+				<label for="icon_prefix">How to prepeare and cook it?</label>
+			</div>
+		</div>
 
         <div id="matfix" class="row">
             <div class="input-field col s12">
