--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -50,9 +50,11 @@
 		</div>
          <div class="row">
 			<div class="input-field col s12">
-				<i class="material-icons prefix">edit</i>
-				<textarea id="cooking" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
-				<label for="icon_prefix">How to prepeare and cook it?</label>
+                <div class="row">
+			        <button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Upload Photo
+				    <i class="material-icons right">done_all</i>
+                    </button>
+		        </div>				
 			</div>
 		</div>
 
@@ -75,7 +77,7 @@
 		</div>
 		
 		<div class="row">
-			<button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Upload Recipe
+			<button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Submit Recipe
 				<i class="material-icons right">done_all</i></button>
 		</div>
 	</form>
