photo upload link added

--- a/templates/share_recipe.html
+++ b/templates/share_recipe.html
@@ -5,7 +5,7 @@
 		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">add</i>
-				<input id="name" name="name" type="text" required class="materialize-textarea form-control validate"> 
+				<input id="name" name="name" type="text" required class="materialize-textarea form-control validate">
 				<label for="icon_prefix">Recipe Name</label>
 			</div>
 		</div>
@@ -26,45 +26,42 @@
 				<label>Culinary Region</label>
 			</div>
 		</div>
-        
-         <div class="row">
+
+		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">map</i>
 				<textarea id="time_to_prepare" name="time_to_prepare" type="text" required class="materialize-textarea form-control validate"></textarea>
 				<label for="icon_prefix">Time needed to prepare</label>
 			</div>
 		</div>
-         <div class="row">
+		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">map</i>
 				<textarea id="ingredients" name="ingredients" type="text" required class="materialize-textarea form-control validate"></textarea>
 				<label for="icon_prefix">Ingredients and Spice</label>
 			</div>
 		</div>
-         <div class="row">
+		<div class="row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">edit</i>
 				<textarea id="cooking" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
 				<label for="icon_prefix">How to prepeare and cook it?</label>
 			</div>
 		</div>
-         <div class="row">
+		<div class="row">
 			<div class="input-field col s12">
-                <div class="row">
-			        <button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Upload Photo
-				    <i class="material-icons right">done_all</i>
-                    </button>
-		        </div>				
+				<i class="material-icons prefix">attach_file</i>
+				<textarea id="photo" name="cooking" type="text" required class="materialize-textarea form-control validate"></textarea>
+				<label for="icon_prefix">Upload photo link your device using imgur.com platform, copy/past this link https://imgur.com/a/NWM4YZE for quick tutorial</label>
 			</div>
 		</div>
-
-        <div id="matfix" class="row">
-            <div class="input-field col s12">
+		<div id="matfix" class="row">
+			<div class="input-field col s12">
 				<i class="material-icons prefix">date_range</i>
 				<input id="upload-date" name="upload-date" type="text" required class="validate datepicker">
 				<label for="icon_prefix">Date of Upload</label>
 			</div>
-        </div>
+		</div>
 		<div class="row">
 			<div class="switch">
 				<label>
@@ -75,9 +72,10 @@
 				</label>
 			</div>
 		</div>
-		
+
 		<div class="row">
-			<button class="btn waves-effect waves-light" type="submit" name="action" id="myBtn">Submit Recipe
+
+			<button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
 				<i class="material-icons right">done_all</i></button>
 		</div>
 	</form>
