--- a/templates/meals.html
+++ b/templates/meals.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %} {% block content %}
-
 <ul class="collapsible" data-collapsible="accordion">
 	{% for recipe in recipes %}
 	<li>
@@ -14,7 +13,7 @@
             <div class="inline_actions">
 				<a href="{{url_for('review_meals', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">Rate</a>
                 <a href="{{url_for('carta', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">View</a>
-				<a href="{{url_for('delete_recipe', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small">Remove</a>
+				<a href="{{url_for('file_upload', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small">Please upload photo</a>
             </div>
 			</div>
 		</div>
