list of recipe cards and image

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,15 +49,15 @@
             </a>
           </li>
           <li>
-            <a href="{{ url_for('meals') }}" class="navbar-item">
+            <a href="{{ url_for('carta') }}" class="navbar-item">
               Recipes
             </a>
-          </li>
+          </li> 
           <li>
             <a href="{{ url_for('share_recipe') }}" class="navbar-item">
               Upload
             </a>
-          </li>
+          </li> 
           <li>
             <a href="{{ url_for('logout') }}" class="navbar-item">
               Logout
