--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -1,11 +1,31 @@
 {% extends 'base.html' %} {% block content %} 
 <h3>View recipes</h3>
-<ul class="collapsible" data-collapsible="accordion">
-	{% for recipe in recipes %} 
-	<li>
-		<div class="collapsible-header"><i class="material-icons">airplay</i>{{recipe.name}} - {{recipe.description}}</div>
-		<div class="collapsible-body"><span>{{recipe.ingredients}}</span></div>
-	</li>
-	{% endfor %}
-</ul>
-{% endblock %}
+   {% for recipe in recipes %}
+
+    {{recipe.name}}
+    {{recipe.description}}
+    {{recipe.time_to_prepare}}
+    {{recipe.ingredients}}
+    {{recipe.upload_date}}
+    {{recipe.cooked_meal}}
+
+    <ul>
+    <li>
+     <div class="card medium">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img src="{{recipe.image}}">
+    </div>
+    <div class="card-content">
+      <span class="card-title activator grey-text text-darken-4">{{recipe.name}}<i class="material-icons right">more_vert</i></span>
+      <p><a href="#">This is a link</a></p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4">{{recipe.image}}<i class="material-icons right">close</i></span>
+      <p>{{recipe.description}}</p> - {{recipe.time_to_prepare}} - {{recipe.ingredients}} - {{recipe.upload_date}} - {{recipe.cooked_meal}}</p>
+    </div>
+  </div>
+    </li>
+    </ul>
+
+    {% endfor %}
+  {% endblock %}
