--- a/templates/meals.html
+++ b/templates/meals.html
@@ -14,7 +14,7 @@
             <div class="inline_actions">
 				<a href="{{url_for('review_meals', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">Rate</a>
                 <a href="{{url_for('carta', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small red">View</a>
-				<a href="{{url_for('delete_recipe', meal_id=recipe._id)}}" class="waves-effect waves-light btn btn-small">Delete</a>
+				<a href="#" class="waves-effect waves-light btn btn-small">Delete</a>
             </div>
 			</div>
 		</div>
