field for type of cooking added and unbugged

--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -31,6 +31,7 @@
 					<p>{{recipe.culinary_region}}</p>
 					<p>{{recipe.time_to_prepare}}</p>
 					<p>{{recipe.ingredients}}</p>
+                    <p>{{recipe.cooking}}</p>
 					<p>{{recipe.upload_date}}</p>
 					<p>{{recipe.cooked_meal}}</p>
 				</div>
